Bug 310039 - Regression: kio-ftp crashes when trying to connect to a server
Summary: Regression: kio-ftp crashes when trying to connect to a server
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: ftp (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 310410 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-13 17:16 UTC by Christophe Marin
Modified: 2012-11-20 16:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2012-11-13 17:16:50 UTC
Using an up-to-date kdelibs 4.10.

When trying to open a local ftp server, kio_ftp crashes right away (tested with both Konqueror & Dolphin

Works nicely with a non-KDE app (eg firefox).
One of the folders at root contains a space.

#5  0x00007fe72ac0feca in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at global/qglobal.cpp:2013
#6  0x00007fe71a7a4c88 in Ftp::ftpCreateUDSEntry (this=0x7fff058ba4e0, filename=..., ftpEnt=..., entry=..., isDir=false) at /kde/src/kdelibs/kioslave/ftp/ftp.cpp:1298
#7  0x00007fe71a7a66c2 in Ftp::listDir (this=0x7fff058ba4e0, url=...) at /kde/src/kdelibs/kioslave/ftp/ftp.cpp:1580
#8  0x00007fe7242197e0 in KIO::SlaveBase::dispatch (this=0x7fff058ba4f0, command=71, data=...) at /kde/src/kdelibs/kio/kio/slavebase.cpp:1092
#9  0x00007fe7242158b2 in KIO::SlaveBase::dispatchLoop (this=0x7fff058ba4f0) at /kde/src/kdelibs/kio/kio/slavebase.cpp:295
#10 0x00007fe71a79e8c6 in kdemain (argc=4, argv=0x198d960) at /kde/src/kdelibs/kioslave/ftp/ftp.cpp:186
#11 0x0000000000407288 in launch (argc=4, _name=0x1992368 "kio_ftp", args=0x19923de "", cwd=0x0, envc=0, envs=0x19923e6 "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40d76f "0")
    at /kde/src/kdelibs/kinit/kinit.cpp:726
#12 0x000000000040838a in handle_launcher_request (sock=8, who=0x40da0c "launcher") at /kde/src/kdelibs/kinit/kinit.cpp:1218
#13 0x0000000000408c42 in handle_requests (waitForPid=0) at /kde/src/kdelibs/kinit/kinit.cpp:1411
#14 0x000000000040a804 in main (argc=4, argv=0x7fff058bb128, envp=0x7fff058bb150) at /kde/src/kdelibs/kinit/kinit.cpp:1899
Comment 1 Christophe Marin 2012-11-13 17:22:30 UTC
...And reverting 014e8f3c fixes the crash.
Comment 2 Dawit Alemayehu 2012-11-14 05:06:46 UTC
Git commit d055452fc5e6118c024747b4a1921565a4a50d18 by Dawit Alemayehu.
Committed on 14/11/2012 at 00:11.
Pushed by adawit into branch 'KDE/4.9'.

Prevent a Q_ASSERT crash when invoking ftpCreateUDSEntry.
FIXED-IN: 4.9.4

M  +2    -0    kioslave/ftp/ftp.cpp

http://commits.kde.org/kdelibs/d055452fc5e6118c024747b4a1921565a4a50d18
Comment 3 Jekyll Wu 2012-11-20 16:43:48 UTC
*** Bug 310410 has been marked as a duplicate of this bug. ***