Prevent a Q_ASSERT crash when invoking ftpCreateUDSEntry.

BUG: 310039
FIXED-IN: 4.9.4